Fix back arrow not working on mobile (#1)

--- a/themes/material/assets/css/main.css
+++ b/themes/material/assets/css/main.css
@@ -279,6 +279,7 @@ p {
     height: 30px;
     border-radius: 50%;
     transition: background-color 0.2s;
+    z-index: 100;
 }
 
 .arrow-back:hover,
